Bug #7213 information_schema: redundant non-standard TABLE_NAMES table
Submitted: 13 Dec 2004 1:17 Modified: 18 Dec 2004 8:34
Reporter: Peter Gulutzan Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S3 (Non-critical)
Version:5.0.3-alpha-debug OS:Linux (SUSE 9.2)
Assigned to: Sergei Glukhov CPU Architecture:Any

[13 Dec 2004 1:17] Peter Gulutzan
Description:
There is a new table in information_schema, 
named TABLE_NAMES. This is redundant (one can 
get the same thing with information_schema.tables) 
and non-standard (it's not mentioned in SQL:2003). 
 

How to repeat:
mysql> select * from information_schema.table_names; 
+---------------+--------------------+---------------------------------------+------------+ 
| TABLE_CATALOG | TABLE_SCHEMA       | TABLE_NAME                            | TABLE_TYPE | 
+---------------+--------------------+---------------------------------------+------------+ 
| NULL          | information_schema | SCHEMATA                              | TEMPORARY  | 
... 
+---------------+--------------------+---------------------------------------+------------+ 
18 rows in set (0.00 sec) 
 
mysql> select table_catalog, table_schema, table_name, table_type from 
information_schema.tables; 
+---------------+--------------------+---------------------------------------+------------+ 
| table_catalog | table_schema       | table_name                            | table_type | 
+---------------+--------------------+---------------------------------------+------------+ 
| NULL          | information_schema | SCHEMATA                              | TEMPORARY  | 
... 
+---------------+--------------------+---------------------------------------+------------+ 
18 rows in set (0.04 sec)
[18 Dec 2004 8:34] Sergei Glukhov
fixed in 5.0 source tree