Fix for bug #7213: information_schema: redundant non-standard TABLE_NAMES table